--- a/src/index.css
+++ b/src/index.css
@@ -163,6 +163,7 @@ body {
   min-height: 100vh;
   position: relative; 
   margin: 0;
+  overflow-x: hidden;
 }
 
 a {
